--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 	<body>
 		<div class="container">
 			<header class="clearfix">
-				<span>Blueprint</span>
-				<h1>Fixed Background Scrolling Layout</h1>
 				<nav>
-					<a href="http://tympanus.net/Blueprints/BackgroundSlideshow/" class="icon-arrow-left" data-info="previous Blueprint">Previous Blueprint</a>
-					<a href="http://tympanus.net/codrops/?p=14921" class="icon-drop" data-info="back to the Codrops article">back to the Codrops article</a>
+					<a href="#" class="icon-arrow-left" data-info="previous Blueprint">Previous Blueprint</a>
+					<a href="#" class="icon-drop" data-info="back to the Codrops article">back to the Codrops article</a>
+					<i class="fab fa-facebook"></i>
+					<i class="fab fa-instagram"></i>
+					<a href="#" class="icon-drop" data-info="back to the Codrops article">Down</a>
 				</nav>
 			</header>	
 			<div id="cbp-fbscroller" class="cbp-fbscroller">
@@ -30,12 +31,15 @@
 					<a href="#fbsection3">Section 3</a>
 					<a href="#fbsection4">Section 4</a>
 					<a href="#fbsection5">Section 5</a>
+					<a href="#fbsection5">Section 6</a>
 				</nav>
 				<section id="fbsection1"></section>
 				<section id="fbsection2"></section>
 				<section id="fbsection3"></section>
 				<section id="fbsection4"></section>
 				<section id="fbsection5"></section>
+				<section id="fbsection6"></section>
+				<iframe src="https://snazzymaps.com/embed/232779" width="100%" height="100%" style="border:none;"></iframe>
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -51,5 +55,6 @@
 				cbpFixedScrollLayout.init();
 			});
 		</script>
+
 	</body>
 </html>
