--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 		<div class="container">
 			<header class="clearfix">
 				<nav>
-					<a href="#" class="icon-arrow-left" data-info="previous Blueprint">Previous Blueprint</a>
-					<a href="#" class="icon-drop" data-info="back to the Codrops article">back to the Codrops article</a>
+					<a href="#"><img src="images/Academia.svg"></a>
+					<a href="#"><img src="images/UM.svg"></a>
 					<i class="fab fa-facebook"></i>
 					<i class="fab fa-instagram"></i>
-					<a href="#" class="icon-drop" data-info="back to the Codrops article">Down</a>
+					<a href="#"><img src="images/Shape.svg"></a>
 				</nav>
 			</header>	
 			<div id="cbp-fbscroller" class="cbp-fbscroller">
@@ -33,13 +33,42 @@
 					<a href="#fbsection5">Section 5</a>
 					<a href="#fbsection5">Section 6</a>
 				</nav>
-				<section id="fbsection1"></section>
+				<section id="fbsection1">
+					<img src="images/Shirt.svg">
+					<h1>Taller de</h1>
+					<h1>Serigrafía</h1>
+					<p>PARA JÓVENES Y ADULTOS</p>
+					<br> <a href="index.html"><button>YO VOY</button></a> 
+				</section>
 				<section id="fbsection2"></section>
-				<section id="fbsection3"></section>
+				<div>><img src="images/Shirt%202.svg">
+				<h1>EMPRENDE</h1>
+				<p>Al salir del curso, estará armado con todos esos consejos, trucos y secretos para ir a casa y abrir las puertas de su propio negocio</p></div>
+				<div>><img src="images/Time.svg">
+				<h1>TIEMPO</h1>
+				<p>Nuestro taller es muy practico. 2 x 5, dos horas por cinco días siendo creativos y ensuciadose las manos.</p></div>
+				<div>><img src="images/Money.svg">
+				<h1>DINERO</h1>
+				<p>Un curso con un precio accecible, para llegar a ser experto en serigrafía y lo mejor, los materiales están incluidos.</p></div>
+				
+				<section id="fbsection3">
+				<h1>"</h1>
+					<img src="images/Lorena.jpg">
+				<h2>Cuando salí de ese curso, tuve las habilidades y la información que necesita para ir a casa y comenzar con mi propio negocio de ropa impresa.</h2>
+				<h1>Lorena<span>Díaz</span></h1>
+				<ul>
+				<li><a href="#" class="icon-arrow-left" data-info="previous Blueprint">Samuel</a></li>
+				<li><a href="#" class="icon-arrow-left" data-info="previous Blueprint">Samuel</a></li>
+				<li><a href="#" class="icon-arrow-left" data-info="previous Blueprint">Samuel</a></li>
+				<li><a href="#" class="icon-arrow-left" data-info="previous Blueprint">Samuel</a></li>
+				<li><a href="#" class="icon-arrow-left" data-info="previous Blueprint">Samuel</a></li>
+				</ul>
+				</section>
+				
 				<section id="fbsection4"></section>
 				<section id="fbsection5"></section>
-				<section id="fbsection6"></section>
-				<iframe src="https://snazzymaps.com/embed/232779" width="100%" height="100%" style="border:none;"></iframe>
+				<section id="fbsection6">
+				<iframe src="https://snazzymaps.com/embed/232779" width="100%" height="100%" style="border:none;"></iframe></section>
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
